--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
         </div>
         <div class="products__block">
           <a class="products__item" href="#">
-            <img class="products__img" src="img/product1.png" alt="" />
+            <img class="products__img" src="img/product1.png" alt="product1" />
             <h3 class="products__title">Lavazza coffee</h3>
             <div class="products__footer">
               <div class="products__price">
@@ -192,51 +192,50 @@
 
       <div class="block__title">News</div>
       <div class="news__wrapper">
-          <div class="news__block">
-              <a href="#" class="news__item">
-                  <img class="news__img" src="img/news1.png" alt="news1" />
-                  <div class="news__content">
-                      <h3 class="news__title">Lavazza coffee</h3>
-                      <p class="news__text">
-                      There are many variations of passages of Lorem Ipsum available,
-                      but the majority have suffered alteration in some form, by
-                      injected humour, or randomised words which don't look even
-                      slightly believable.</p>
-                  </div>
-              </a>
-          </div>
-          <div class="news__block">
-              <a href="#" class="news__item">
-                <img class="news__img" src="img/news1.png" alt="news1" />
-                <div class="news__content">
-                    <h3 class="news__title">Lavazza coffee</h3>
-                    <p class="news__text">
-                    There are many variations of passages of Lorem Ipsum available,
-                    but the majority have suffered alteration in some form, by
-                    injected humour, or randomised words which don't look even
-                    slightly believable.</p>
-                  </div>
-              </a>
-          </div>
-            <div class="news__block">
-              <a href="#" class="news__item">
-                <img class="news__img" src="img/news1.png" alt="news1" />
-                <div class="news__content">
-                  <h3 class="news__title">Lavazza coffee</h3>
-                  <p class="news__text">
-                  There are many variations of passages of Lorem Ipsum available,
-                  but the majority have suffered alteration in some form, by
-                  injected humour, or randomised words which don't look even
-                  slightly believable.</p>
-                </div>
-              </a>
+        <div class="news__block">
+          <a href="#" class="news__item">
+            <img class="news__img" src="img/news1.png" alt="news" />
+            <div class="news__content">
+              <h3 class="news__title">Lavazza coffee</h3>
+              <p class="news__text">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable.
+              </p>
             </div>
+          </a>
+        </div>
+        <div class="news__block">
+          <a href="#" class="news__item">
+            <img class="news__img" src="img/news1.png" alt="news1" />
+            <div class="news__content">
+              <h3 class="news__title">Lavazza coffee</h3>
+              <p class="news__text">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable.
+              </p>
+            </div>
+          </a>
+        </div>
+        <div class="news__block">
+          <a href="#" class="news__item">
+            <img class="news__img" src="img/news3.png" alt="news123" />
+            <div class="news__content">
+              <h3 class="news__title">Lavazza coffee</h3>
+              <p class="news__text">
+                There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered alteration in some form, by
+                injected humour, or randomised words which don't look even
+                slightly believable.
+              </p>
+            </div>
+          </a>
         </div>
       </div>
-      </div>
-    </div><!--/.container-->
     </div>
-
-    <div style="height: 100vh"></div>
+    <!--/.container-->
   </body>
 </html>
